# rataz-tech-refinery-os

./: .dockerignore  .gitignore  DOMAIN_NOTES.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
configs/: settings.yaml
docs/: ARCHITECTURE.md  CODE_SKELETONS.md  COST_ESTIMATION.md  RUBRIC_MAPPING.md  TEST_RESULTS.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/: ResultPanels.tsx  StageTimeline.tsx  UploadDropzone.tsx
frontend/src/hooks/: useExtraction.ts  useTheme.ts
frontend/src/lib/: api.ts  types.ts
prompts/: SYSTEM_PROMPT.md
src/rataz_tech/: __init__.py  main.py
src/rataz_tech/api/: __init__.py  models.py  server.py  services.py
src/rataz_tech/benchmark/: __init__.py  cli.py  runner.py
src/rataz_tech/chunking/: factory.py  (+2 more)
tests/: test_api.py  test_benchmark_runner.py  test_claim_and_facts.py  test_extraction_triage.py  test_extractor_router_efficiency.py  test_fact_extractor_profit_lines.py  test_fast_text_parsers.py  test_indexing_efficiency.py  test_indexing_metadata_ingestion.py  test_pageindex_advanced.py  test_pipeline.py  test_provenance_quality_gate.py  test_query_agent.py  test_query_semantic_integration.py  test_schema_models.py  test_semantic_chunking_engine.py  test_semantic_retrieval.py  test_stage_telemetry.py  test_storage_facttable_sqlite.py  test_tier_b_layout_adapters.py  test_tier_c_vision_adapters.py  test_vendor_registry.py  test_vision_budget.py
(+29 files in other folders)
