[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rataz-tech-refinery"
version = "0.1.0"
description = "Rataz Tech Refinery-OS: open-source document intelligence engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
ui = [
  "kivy>=2.3.0"
]
api = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
rataz-tech-demo = "rataz_tech.main:run_demo"
rataz-tech-ui = "rataz_tech.ui.kivy_app:run_ui"
rataz-tech-api = "rataz_tech.api.server:run_api"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
